// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox 1`] = `
<div
  className="box"
>
  <div
    className="box itemsCenter marginEndN1 marginStartN1 xsDisplayFlex"
  >
    <label
      className="label"
      htmlFor="id"
    >
      <div
        className="box paddingX1 relative"
      >
        <input
          checked={false}
          className="input sizeMd inputEnabled"
          disabled={false}
          id="id"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          type="checkbox"
        />
        <div
          className="whiteBg border borderRadiusMd sizeMd check"
        />
      </div>
    </label>
    <div
      className="box xsDisplayBlock"
    >
      <label
        className="label"
        htmlFor="id"
      >
        <div
          className="box paddingX1"
        >
          <div
            className="Text fontSize300 defaultText alignStart breakWord fontWeightNormal"
          >
            Name
          </div>
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`Checkbox checked 1`] = `
<div
  className="box"
>
  <div
    className="box itemsCenter marginEndN1 marginStartN1 xsDisplayFlex"
  >
    <label
      className="label"
      htmlFor="id"
    >
      <div
        className="box paddingX1 relative"
      >
        <input
          checked={true}
          className="input sizeMd inputEnabled"
          disabled={false}
          id="id"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          type="checkbox"
        />
        <div
          className="darkGrayBg borderSelected borderRadiusMd sizeMd check"
        >
          <svg
            aria-hidden={true}
            aria-label=""
            className="icon inverseIcon iconBlock"
            height={12}
            role="img"
            viewBox="0 0 24 24"
            width={12}
          >
            <path
              d="test-file-stub"
            />
          </svg>
        </div>
      </div>
    </label>
    <div
      className="box xsDisplayBlock"
    >
      <label
        className="label"
        htmlFor="id"
      >
        <div
          className="box paddingX1"
        >
          <div
            className="Text fontSize300 defaultText alignStart breakWord fontWeightNormal"
          >
            Name
          </div>
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`Checkbox disabled & checked 1`] = `
<div
  className="box"
>
  <div
    className="box itemsCenter marginEndN1 marginStartN1 xsDisplayFlex"
  >
    <label
      className="label"
      htmlFor="id"
    >
      <div
        className="box paddingX1 relative"
      >
        <input
          checked={true}
          className="input sizeSm"
          disabled={true}
          id="id"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          type="checkbox"
        />
        <div
          className="lightGrayBg borderDisabled borderRadiusSm sizeSm check"
        >
          <svg
            aria-hidden={true}
            aria-label=""
            className="icon inverseIcon iconBlock"
            height={8}
            role="img"
            viewBox="0 0 24 24"
            width={8}
          >
            <path
              d="test-file-stub"
            />
          </svg>
        </div>
      </div>
    </label>
    <div
      className="box xsDisplayBlock"
    >
      <label
        className="label"
        htmlFor="id"
      >
        <div
          className="box paddingX1"
        >
          <div
            className="Text fontSize200 subtleText alignStart breakWord fontWeightNormal"
          >
            Name
          </div>
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`Checkbox disabled 1`] = `
<div
  className="box"
>
  <div
    className="box itemsCenter marginEndN1 marginStartN1 xsDisplayFlex"
  >
    <label
      className="label"
      htmlFor="id"
    >
      <div
        className="box paddingX1 relative"
      >
        <input
          checked={false}
          className="input sizeSm"
          disabled={true}
          id="id"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          type="checkbox"
        />
        <div
          className="lightGrayBg borderDisabled borderRadiusSm sizeSm check"
        />
      </div>
    </label>
    <div
      className="box xsDisplayBlock"
    >
      <label
        className="label"
        htmlFor="id"
      >
        <div
          className="box paddingX1"
        >
          <div
            className="Text fontSize200 subtleText alignStart breakWord fontWeightNormal"
          >
            Name
          </div>
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`Checkbox indeterminate 1`] = `
<div
  className="box"
>
  <div
    className="box itemsCenter marginEndN1 marginStartN1 xsDisplayFlex"
  >
    <label
      className="label"
      htmlFor="id"
    >
      <div
        className="box paddingX1 relative"
      >
        <input
          checked={false}
          className="input sizeMd inputEnabled"
          disabled={false}
          id="id"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          type="checkbox"
        />
        <div
          className="darkGrayBg borderSelected borderRadiusMd sizeMd check"
        >
          <svg
            aria-hidden={true}
            aria-label=""
            className="icon inverseIcon iconBlock"
            height={12}
            role="img"
            viewBox="0 0 24 24"
            width={12}
          >
            <path
              d="test-file-stub"
            />
          </svg>
        </div>
      </div>
    </label>
    <div
      className="box xsDisplayBlock"
    >
      <label
        className="label"
        htmlFor="id"
      >
        <div
          className="box paddingX1"
        >
          <div
            className="Text fontSize300 defaultText alignStart breakWord fontWeightNormal"
          >
            Name
          </div>
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`Checkbox small 1`] = `
<div
  className="box"
>
  <div
    className="box itemsCenter marginEndN1 marginStartN1 xsDisplayFlex"
  >
    <label
      className="label"
      htmlFor="id"
    >
      <div
        className="box paddingX1 relative"
      >
        <input
          checked={false}
          className="input sizeSm inputEnabled"
          disabled={false}
          id="id"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          type="checkbox"
        />
        <div
          className="whiteBg border borderRadiusSm sizeSm check"
        />
      </div>
    </label>
    <div
      className="box xsDisplayBlock"
    >
      <label
        className="label"
        htmlFor="id"
      >
        <div
          className="box paddingX1"
        >
          <div
            className="Text fontSize200 defaultText alignStart breakWord fontWeightNormal"
          >
            Name
          </div>
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`Checkbox with an image 1`] = `
<div
  className="box"
>
  <div
    className="box itemsStart marginEndN1 marginStartN1 xsDisplayFlex"
  >
    <label
      className="label"
      htmlFor="id"
    >
      <div
        className="box paddingX1 relative"
      >
        <input
          checked={false}
          className="input sizeSm inputEnabled"
          disabled={false}
          id="id"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          type="checkbox"
        />
        <div
          className="whiteBg border borderRadiusSm sizeSm check"
        />
      </div>
    </label>
    <div
      className="box paddingX1"
    >
      <div
        className="box"
      >
        <div
          className="box relative"
          style={
            Object {
              "backgroundColor": "transparent",
              "paddingBottom": "100%",
            }
          }
        >
          <img
            alt=""
            className="img"
            importance="auto"
            loading="auto"
            onError={[Function]}
            onLoad={[Function]}
            src="https://i.ibb.co/FY2MKr5/stock6.jpg"
          />
        </div>
      </div>
    </div>
    <div
      className="box xsDisplayBlock"
    >
      <label
        className="label"
        htmlFor="id"
      >
        <div
          className="box paddingX1"
        >
          <div
            className="Text fontSize200 defaultText alignStart breakWord fontWeightNormal"
          >
            Name
          </div>
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`Checkbox with error 1`] = `
<div
  className="box"
>
  <div
    className="box itemsStart marginEndN1 marginStartN1 xsDisplayFlex"
  >
    <label
      className="label"
      htmlFor="id"
    >
      <div
        className="box paddingX1 relative"
      >
        <input
          checked={false}
          className="input sizeSm inputEnabled"
          disabled={false}
          id="id"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          type="checkbox"
        />
        <div
          className="whiteBg borderError borderRadiusSm sizeSm check"
        />
      </div>
    </label>
    <div
      className="box xsDisplayBlock"
    >
      <label
        className="label"
        htmlFor="id"
      >
        <div
          className="box paddingX1"
        >
          <div
            className="Text fontSize200 defaultText alignStart breakWord fontWeightNormal"
          >
            Name
          </div>
          <div
            className="box marginTop2"
          >
            <div
              className="Text fontSize100 errorText alignStart breakWord fontWeightNormal"
            >
              <span
                className="formErrorMessage"
                id="id-error"
              >
                <div
                  className="box xsDisplayVisuallyHidden"
                >
                  :
                </div>
                Error message
              </span>
            </div>
          </div>
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`Checkbox with helperText 1`] = `
<div
  className="box"
>
  <div
    className="box itemsStart marginEndN1 marginStartN1 xsDisplayFlex"
  >
    <label
      className="label"
      htmlFor="id"
    >
      <div
        className="box paddingX1 relative"
      >
        <input
          checked={false}
          className="input sizeSm inputEnabled"
          disabled={false}
          id="id"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          type="checkbox"
        />
        <div
          className="whiteBg border borderRadiusSm sizeSm check"
        />
      </div>
    </label>
    <div
      className="box xsDisplayBlock"
    >
      <label
        className="label"
        htmlFor="id"
      >
        <div
          className="box paddingX1"
        >
          <div
            className="Text fontSize200 defaultText alignStart breakWord fontWeightNormal"
          >
            Name
          </div>
          <div
            className="box marginTop2"
          >
            <div
              className="Text fontSize100 subtleText alignStart breakWord fontWeightNormal"
            >
              <div
                className="box xsDisplayVisuallyHidden"
              >
                :
              </div>
              Additional Info
            </div>
          </div>
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`Checkbox without label 1`] = `
<div
  className="box"
>
  <div
    className="box itemsCenter marginEndN1 marginStartN1 xsDisplayFlex"
  >
    <label
      className="label"
      htmlFor="id"
    >
      <div
        className="box paddingX1 relative"
      >
        <input
          checked={false}
          className="input sizeMd inputEnabled"
          disabled={false}
          id="id"
          onBlur={[Function]}
          onChange={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          type="checkbox"
        />
        <div
          className="whiteBg border borderRadiusMd sizeMd check"
        />
      </div>
    </label>
  </div>
</div>
`;
